--- a/css/font-awesome.css
+++ b/css/font-awesome.css
@@ -23,8 +23,8 @@
     */
 @font-face {
   font-family: 'FontAwesome';
-  src: url('../font/fontawesome-webfont.eot');
-  src: url('../font/fontawesome-webfont.eot?#iefix') format('embedded-opentype'), url('../font/fontawesome-webfont.woff') format('woff'), url('../font/fontawesome-webfont.ttf') format('truetype'), url('../font/fontawesome-webfont.svg#FontAwesome') format('svg');
+  src: url('/packages/bootstrap-font-awesome/font/fontawesome-webfont.eot');
+  src: url('/packages/bootstrap-font-awesome/font/fontawesome-webfont.eot?#iefix') format('embedded-opentype'), url('/packages/bootstrap-font-awesome/font/fontawesome-webfont.woff') format('woff'), url('/packages/bootstrap-font-awesome/font/fontawesome-webfont.ttf') format('truetype'), url('/packages/bootstrap-font-awesome/font/fontawesome-webfont.svg#FontAwesome') format('svg');
   font-weight: normal;
   font-style: normal;
 }
